(fix): default height for selector to avoid popper placing in wrong position

--- a/src/app/common/components/emoji-picker/emoji-picker.component.scss
+++ b/src/app/common/components/emoji-picker/emoji-picker.component.scss
@@ -106,3 +106,7 @@ m-emojiPicker {
     opacity: 0.7;
   }
 }
+
+.m-emojiPicker__placeholder {
+  height: 400px;
+}
